# cookiecutter-laboratorium-registry

./: README.rst  cookiecutter.json
hooks/: pre_gen_project.py
laboratorium.registry.{{cookiecutter.plugin_name}}/: README.rst  setup.cfg  setup.py
laboratorium.registry.{{cookiecutter.plugin_name}}/doc/src/: conf.py  index.rst
laboratorium.registry.{{cookiecutter.plugin_name}}/src/laboratorium/registry/{{cookiecutter.plugin_name}}/: __init__.py  registrar.py
tests/: test_template.py
